# qabrains-ecommerce

./: .gitignore  README.md  login.py  pyproject.toml  qa-brains.xlsx  test_cart.py  test_login.py  test_product.py
.github/workflows/: python-app.yml
